# dw_softcenter

./: README.md  pyproject.toml
dbt_softcenter/: dbt_project.yml
dbt_softcenter/macros/: generate_schema_name.sql
dbt_softcenter/macros/tests/: test_cptit_row_count.sql  test_cptit_sum_match.sql  test_frctrc_row_count.sql  test_frctrc_sum_match.sql
dbt_softcenter/models/marts/: _calendario__models.yml  _contas_pagar__models.yml  _cte__models.yml  calendario.sql  contas_pagar.sql  cte.sql
dbt_softcenter/models/staging/fn9/: _fn9__models.yml  _fn9__sources.yml  _fn9_cptit__models.yml  _fn9_factrc__models.yml  _fn9_frctrc__models.yml  _fn9_tbcid__models.yml  _fn9_tbcli__models.yml  _fn9_tbcta__models.yml  _fn9_tbfil__models.yml  _fn9_tbfor__models.yml  _fn9_tbhis__models.yml  _fn9_tbpro__models.yml  stg_fn9__cptit.sql  stg_fn9__factrc.sql  (+8 more)
dbt_softcenter/seeds/: ibge_municipios.csv
dbt_softcenter/tests/: test_cptit_row_count_match.sql  test_frctrc_row_count_match.sql
querys/staging/: cptit.py  cptit_models.py  factrc.py  factrc_models.py  frctrc.py  frctrc_models.py  sources.py  tbcid.py  tbcid_models.py  tbcli.py  tbcli_models.py  tbcta.py  tbcta_models.py  tbfil.py  tbfil_models.py  tbfor.py  tbfor_models.py  tbhis.py  tbhis_models.py  tbpro.py  tbpro_models.py
src/: main.py  transform.py
src/ibge/: request_ibge.py  transform_ibge.py
src/staging/: cptit.py  factrc.py  frctrc.py  source.py  tbcid.py  tbcli.py  tbcta.py  tbfil.py  tbfor.py  tbhis.py  tbpro.py
src/utils/: schema.py  table.py  writer.py
views/: cpttit_bi.sql  factrc_bi.sql  frctrc_bi.sql
(+45 files in other folders)
